packages/typ/tests/fixtures/diagnostics/0335_fun_recursive_branch_mismatch_10.ml.expected
File "0335_fun_recursive_branch_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0335_fun_recursive_branch_mismatch_10 is not a valid module name.

File "0335_fun_recursive_branch_mismatch_10.ml", line 2, characters 22-27:
2 |   if flag then 9 else false
                          ^^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
